<resources>
    <string name="app_name">SubmissionFundamentalRetrofit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_here">Search Here</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repositories">Repositories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
</resources>