<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.submissionfundamentalretrofit.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/favorite_navigation"
        android:name="com.example.submissionfundamentalretrofit.ui.fragment.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.submissionfundamentalretrofit.ui.fragment.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
</navigation>