<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="24dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.107"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_detail_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toEndOf="@+id/img_user"
            app:layout_constraintTop_toTopOf="@+id/img_user"
            app:layout_constraintVertical_bias="0.19999999"
            tools:text="Lorem Ipsum" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
            tools:text="LoremIpsum" />

        <TextView
            android:id="@+id/id_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
            tools:text="LoremIpsum"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_username"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_username"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_username"
            tools:text="LoremIpsum" />

        <TextView
            android:id="@+id/tv_detail_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
            tools:text="Lorem Ipsum" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/following"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_followers"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_followers" />

        <TextView
            android:id="@+id/tv_detail_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_detail_followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_followers"
            tools:text="Lorem Ipsum" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/followers"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_following"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_following" />

        <TextView
            android:id="@+id/tv_detail_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_followers"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_followers"
            tools:text="Lorem Ipsum" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/repositories"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_repositories"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_repositories"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_repositories" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs_detail" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="355dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"/>
</androidx.constraintlayout.widget.ConstraintLayout>